# bazel-expecto-repro

./: README.md
ratio/: BUILD.bazel  Library.fs  ratio.fsproj
ratio.tests/: BUILD.bazel  Program.fs  ratio.tests.fsproj
