load("@rules_dotnet//dotnet:defs.bzl", "fsharp_binary")

fsharp_binary(
  name = "tests",
  srcs = [
    "Program.fs",
  ],
  target_frameworks = [ "net6.0" ],
  deps = [
    "@paket.main//microsoft.netcore.app.ref",
    "@paket.main//fsharp.core",
    "@paket.main//expecto",
    "//ratio",
  ],
)

sh_test(
  name = "ratio.tests",
  srcs = [ "test.sh" ],
  args = [ "$(location :tests)" ],
  data = [
    ":tests",
  ],
)
